flask is working well

--- a/npm-wrapper/package.json
+++ b/npm-wrapper/package.json
@@ -5,6 +5,7 @@
 "bin": {
 "Apimatic": "index.js"
 },
-"author": "Your Name",
-"license": "MIT"
+"author": "Matrixxboy",
+"license": "MIT",
+"devDependencies": {}
 }
