added --help with proper instruction

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ authors = [
 ]
 dependencies = [
     "pyyaml",
-    "flask",
-    "Django",
-    "fastapi",
+    "elasticsearch",
+    "httpx",
+    "e",
 ]
 
 [project.scripts]
