some small updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,17 @@ dependencies = [
     "elasticsearch",
     "httpx",
     "e",
+    "argparse",
+    "typing",
+    "pathlib",
+    "sys",
+    "json",
+    "urllib",
+    "re",
+    "collections",
+    "functools",
+    "itertools",
+    "inspect"
 ]
 
 [project.scripts]
